--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -30,10 +30,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def factorial(n):\n",
+    "    \n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    return n*factorial(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial(3)"
+   ]
   }
  ],
  "metadata": {
